--- a/src/main/resources/public/login/Login-View.html
+++ b/src/main/resources/public/login/Login-View.html
@@ -71,7 +71,7 @@
                 <label for="inputPassword" class="sr-only">Contraseña</label>
                 <input id="inputPassword" class="form-control" name="contraseña" id="contraseña" placeholder="Contraseña" required oninvalid="this.setCustomValidity('Debe ingresar una contraseña')" type="password">
                 <button class="btn btn-lg btn-primary" type="submit" name="aceptar" value="aceptar">Aceptar</button><br><br>
-                <button class="btn btn-info" type="submit">Ver Mapa</button>
+                <button class="btn btn-info" type="button" onclick="location.href='mapa.gif'">Ver Mapa</button>
             </div>
             <div class="column">
                 <img src="SGE-Login-image.jpg" alt="imagen login" width="275" height="350">
