--- a/src/main/resources/public/login/Login-View.html
+++ b/src/main/resources/public/login/Login-View.html
@@ -62,7 +62,7 @@
 </head>
 
 <body class="text-center">
-    <form class="form-signin" action="/" method="POST">
+    <form class="form-signin" action="/login" method="POST">
         <div class="row">
             <div class="column">
                 <h1 class="h3 mb-3 font-weight-normal">Sistema de Gestión Energética</h1>
